--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 10:39:00 AM</p>
+    <p class="lastupdate">09/18/2020 10:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">74.5&#176;F</td>
+        <td class="data">74.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">74.5&#176;F</td>
+        <td class="data">74.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">74.5&#176;F</td>
+        <td class="data">74.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.2&#176;F</td>
+        <td class="data">55.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.957 inHg (0.000)</td>
+        <td class="data">29.957 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph NW (315&#176;)</td>
+        <td class="data">4 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:36:53 AM">
-            74.5</span><br/>
+          <span title="10:41:39 AM">
+            74.7</span><br/>
           <span title="06:50:10 AM">
             63.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:36:53 AM" class="hival">
-            74.5</span>
+          <span title="10:41:39 AM" class="hival">
+            74.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="10:37:37 AM">
-            14</span><br/>
-          355
+          <span title="10:42:03 AM">
+            16</span><br/>
+          288
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:37:01 AM">
-            76.5</span><br/>
+          <span title="10:41:01 AM">
+            76.6</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 19 hours, 52 minutes</td>
+      <td class="data">16 days, 19 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 19 hours, 52 minutes</td>
+      <td class="data">16 days, 19 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
