--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/18/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/18/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">80.3&#176;F</td>
+        <td class="data">80.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">80.4&#176;F</td>
+        <td class="data">80.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">80.3&#176;F</td>
+        <td class="data">80.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.7&#176;F</td>
+        <td class="data">55.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">42%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.929 inHg (-0.027)</td>
+        <td class="data">29.928 inHg (-0.027)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph NNW (338&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">77.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:53 AM">
-            80.3</span><br/>
+          <span title="11:59:43 AM">
+            80.5</span><br/>
           <span title="06:50:10 AM">
             63.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:53 AM" class="hival">
-            80.4</span>
+          <span title="11:59:43 AM" class="hival">
+            80.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:56:07 AM">
             74</span><br/>
-          <span title="11:54:13 AM">
-            43</span>
+          <span title="11:59:21 AM">
+            42</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:55:01 AM">
-            77.2</span><br/>
+          <span title="12:00:01 PM">
+            77.3</span><br/>
           <span title="04:25:00 AM">
             73.8</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 21 hours, 12 minutes</td>
+      <td class="data">16 days, 21 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 21 hours, 12 minutes</td>
+      <td class="data">16 days, 21 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
